# esp32-WiFi-X

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
examples/basic/: CMakeLists.txt
examples/basic/main/: CMakeLists.txt  app_main.c
include/: wifix.h
src/: dns_hijack.c  prov_auth.c  prov_http.c  prov_internal.h  prov_page.html  prov_softap.c  prov_sta.c  prov_storage.c  wifix.c
